[package]
name = "salvo-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
salvo = { version = "0.48", default-features = false, features = [
    "anyhow",
    "http1",
    "http2",
    "quinn",
    "rustls",
    "jwt-auth",
] }
anyhow = "1"
jsonwebtoken = "8"
serde = "1"
time = "0.3"
tokio = { version = "1", features = ["macros"] }
tracing = "0.1"
tracing-subscriber = "0.3"
